# tjm-vision-automation

./: .gitignore  ALTERNATIVES.md  DOCS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tjm_automation/: api_client.py  capture_template.py  demo.py  grounding.py  main.py  notepad.py  notifications.py  ocr_engine.py  popup_handler.py  screen.py
tests/: test_grounding.py
