[project]
name = "tjm-vision-automation"
version = "0.1.0"
description = "Vision-based desktop automation with dynamic icon grounding (Notepad workflow)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pillow>=10.0.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0,<2.0.0",
    "easyocr>=1.7.1",
    "requests>=2.31.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pygetwindow>=0.0.9",
    "rich>=13.7.0",
]

[project.scripts]
tjm-run = "tjm_automation.main:main"
tjm-demo = "tjm_automation.demo:main"
tjm-capture-template = "tjm_automation.capture_template:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tjm_automation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
